--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="accept">Accept</string>
     <string name="err_name_cannot_be_empty">Name cannot be empty mico</string>
     <string name="go_back">Go Back</string>
+    <string name="recyclerview">RecyclerView</string>
 </resources>
