--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="err_name_cannot_be_empty">Name cannot be empty mico</string>
     <string name="go_back">Go Back</string>
     <string name="recyclerview">RecyclerView</string>
+    <string name="south_park_image">South Park image</string>
 </resources>
